# ResearchClaw

./: LICENSE  README.md  package.json  pyproject.toml
agents/executor/: AGENTS.md  IDENTITY.md
agents/researcher/: AGENTS.md  IDENTITY.md
agents/writer/: AGENTS.md  IDENTITY.md
docs/roadmap/: PRD-v1.0.md
output/draft-v1/: REVIEW-NOTES.md  conclusion.md  experiments.md  introduction.md  method.md  outline.md  related-work.md
rclaw/: __init__.py  agent.py  cli.py  llm.py  orchestrator.py  survey.py  tools.py  workspace.py
skills/artifact-manager/: SKILL.md
skills/bib-exporter/: SKILL.md
skills/citation-builder/: SKILL.md
skills/code-runner/: SKILL.md
skills/experiment-executor/: SKILL.md
skills/experiment-planner/: SKILL.md
skills/literature-search/: SKILL.md
skills/outline-writer/: SKILL.md
skills/paper-reader/: SKILL.md
skills/paper-writer/: SKILL.md
skills/research-agent/: SKILL.md
skills/result-parser/: SKILL.md
skills/section-writer/: SKILL.md
skills/spec-writer/: SKILL.md
skills/task-decomposer/: SKILL.md
skills/workspace-manager/: SKILL.md
src/cli/program/: command-registry.ts  register.research.ts
src/research/: cli.ts  executor-runner.ts  index.ts  paper-writer.ts  pipeline.ts  planner-runner.ts  state.ts  survey-runner.ts  types.ts
src/research/prompts/: executor-agent.ts  paper-writer-agent.ts  planner-agent.ts  survey-agent.ts
templates/memory/: MEMORY.md
templates/plans/: plan.template.md
templates/spec/: research-spec.template.md
templates/writing/: outline.template.md
